turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:0: error: ':' expected but ')' found.
class LangtonsAnt extends SimpleBuggle {def setCouleurSol(couleur) {setCouleurBrosse(couleur);baisseBrosse();leveBrosse()}
                                                                 ^LangtonsAnt:13: error: identifier expected but '}' found.
}
^