turmites.lessons.turmites.langton.Langton.scala.code
def setCouleurSol(couleur) {setCouleurBrosse(couleur);baisseBrosse();leveBrosse()}

def step() {
}